# connectonion-mail-agent-demo

./: .coignore  .gitignore  CHANGELOG.md  EXECUTION_FLOW.md  LICENSE  README.md  agent.py  cli.py  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  tox.ini  utils.py
cli/: __init__.py  commands.py  contacts_provider.py  core.py  interactive.py  setup.py
plugins/: __init__.py  agent_visibility.py  approval_workflow.py  email_insights.py
prompts/: agent.md  crm_init.md
samples/: README.md
tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_plugins.py  test_utils.py
